# rauth

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/config/: mod.rs
src/crypto/: mod.rs
src/services/: email.rs  identity_store.rs  mod.rs  workers.rs
src/sql/: mod.rs
src/sql/migrations/: V1__InitialCreate.sql  V2__UseTimezones.sql  V3__ChangeUserBitFields.sql
src/stores/: identity_store.rs  mod.rs
