[package]
name = "rauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
hyper = { version = "1.0.0-rc.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http-body-util = "0.1.0-rc.2"
url = "2.3.1"
uuid = { version = "1.3.2", features = ["v4"] }
dashmap = "5.4.0"
refinery = { version = "0.8", features = ["mysql_async", "tiberius", "tokio-postgres"]}
tokio-postgres = "0.7.8"
barrel = "0.7.0"
ring = "0.16.20"

