[package]
name = "rauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
hyper = { version = "1.0.0-rc.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http-body-util = "0.1.0-rc.2"
url = "2.3.1"
uuid = { version = "1.3.2", features = ["v4"] }
refinery = { version = "0.8", features = ["mysql_async", "tiberius", "tokio-postgres"]}
tokio-postgres = { version = "0.7.8", features = ["with-chrono-0_4", "with-uuid-1"] }
ring = "0.16.20"
chrono = "0.4.24"
argon2 = "0.5.0"
lazy_static = "1.4.0"
tokio-rustls = "0.24.1"
rustls-pemfile = "1.0.2"
